--- a/TODO.txt
+++ b/TODO.txt
@@ -4,3 +4,4 @@ Melee damage rebalance
 Gunfire alert horde
 Witch alert horde
 Boomer explosion incap
+Survivors spawn with knife secondary rather than pistol
