increased horde size; panic starts per witch aggro; players should shove each other

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,6 @@
-Firearm damage rebalance
+* Firearm damage rebalance
 Explosion instakill + shove
-Melee damage rebalance
+# Melee damage rebalance
 Gunfire alert horde
 Witch alert horde
 Boomer explosion incap
