--- a/TODO.txt
+++ b/TODO.txt
@@ -1,7 +1,7 @@
 * Firearm damage rebalance
 xx Explosion instakill + shove
 * Melee damage rebalance
-Gunfire alert horde
+xxx Gunfire alert horde
 * Witch alert horde
 Boomer explosion incap
 Survivors spawn with knife secondary rather than pistol
